--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+CLOUDFLARE_KEY=""
+DYNDNS_SUBDOMAIN=""
+DYNDNS_ZONE_ID=""
+DYNDNS_RECORD_ID=""
+DYNDNS_NOTIFICATION_EMAIL=""
