--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "geisi/laravel-dyndns": "dev-main"
+        "geisi/laravel-dyndns": "^0.1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -62,13 +62,6 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/geisi/laravel-dyndns"
-        }
-
-    ],
     "minimum-stability": "dev",
     "prefer-stable": true
 }
